// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Weather/> Should render an <img> tag with className 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <img
    alt="Weather"
    className="icon"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": <img
      class="icon"
      alt="Weather"
/>,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "alt": "Weather",
      "className": "icon",
    },
    "ref": null,
    "rendered": Array [
      undefined,
    ],
    "type": "img",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": <img
        class="icon"
        alt="Weather"
/>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "Weather",
        "className": "icon",
      },
      "ref": null,
      "rendered": Array [
        undefined,
      ],
      "type": "img",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Renders components without crashing 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <div>
    Test
</div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": <div>
      Test
</div>,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Test",
    },
    "ref": null,
    "rendered": Array [
      "Test",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": <div>
        Test
</div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Test",
      },
      "ref": null,
      "rendered": Array [
        "Test",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
